Version 1.5.0+svn:
 * graphics:
   * new ford graphics from Syntax_Error
 * language and i18n:
   * updated translations: Chinese, Finnish, French, German, Polish, Russian,
     Spanish, Turkish
 * multiplayer:
   * revised maps: Den of Onis
 * Python AI:
   * Implemented a function which detects if a location is on the map border.
   * Implemented a function which gives the game's gold parameters.
 * terrains:
   * Reorganisation of the terrain macros including more consistent image
     naming. The old macros are kept for now for compatibility.
 * units:
   * balancing changes:
     * decreased the ranged attack of the Mage of Light from 15-3 to 12-3
     * decreased the melee attack of the Merman Warrior from 8-4 to 10-3
 * WML engine:
   * titlescreen is now randomly loaded
 * miscellaneous and bug fixes:
   * Implemented the option to use the mouse selection clipboard in X11
     the new widget library also uses it.
   * Removed bug introduced in 1.5.0 that allowed use of :debug commands during
     network play
	
Version 1.5.0:
 * campaigns:
   * synchronize all campaign ids with their directory name
   * greatly updated the scenario music playlists in The Rise of Wesnoth,
     Descent into Darkness and The South Guard
   * The Hammer of Thursagan:
     * instead of leadership, the dwarvish loremaster unit line now has a
       similar but unique inspire ability
   * Under the Burning Suns:
     * Minor cosmetic fixes
   * Northern Rebirth:
     * Major WML cleanup and optimisation
     * New respawn mechanism for white mages
   * Liberty:
     * Fix graphic artifact bug #11438
 * Formula AI:
   * added support for Formula AI language, more info available at:
     http://www.wesnoth.org/wiki/FormulaAI
 * graphics:
   * Fixed broken TC on transport-galleon and drake walking corpse graphics
   * New portraits: Elvish Sorceress
   * added a light shadow on the bar of the loading screen
   * new dungeon wall terrain
   * new city-themed village variation