@@ -13,6 +13,9 @@ Version 1.5.0+svn:
  * Unit changes and balancing
    * Decreased the ranged attack of the Mage of Light from 15-3 to 12-3.
    * Decreased the melee attack of the Merman Warrior from 8-4 to 10-3.
+
+ * Game engine
+   * Poison no longer prevents Resting
  
  * User	interface
    * Titlescreen is now randomly loaded.
