@@ -1,6 +1,8 @@
 Version 1.5.0+svn:
  * graphics:
    * new ford graphics from Syntax_Error
+ * game engine:
+   * poison no longer prevents resting
  * language and i18n:
    * updated translations: Chinese, Finnish, French, German, Polish, Russian,
      Spanish, Turkish
